# people_coach_ai_assignments

./: .gitignore  pyproject.toml  requirements.txt
agent_task/: json_utility.py  main.py  prompt.py  rag_mcp.py  sample_data.json  tasks.json  tool.py
prompts/: citation-prompt.txt  system-prompt.txt
sharepoint/: download_sharepoint.py
teams bot/: README.md
teams bot/src/: ai.py  app.py  bot.py  card.py  log.py
