[project]
name = "teams-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "asyncio>=4.0.0",
    "botbuilder-core>=4.17.1",
    "cookiecutter==1.7.0",
    "dotenv>=0.9.9",
    "langchain>=1.3.9",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-openai>=1.3.2",
    "requests>=2.34.2",
]
